<resources>
    <string name="app_name">ProductionProject</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="click_here_to_register">Click here to Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="AddYourNumber">Add Your Number</string>
    <string name="AddGuardianNumber">Add Guardian Number</string>
    <string name="viewRegister">View Registered</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="help">Danger</string>
    <string name="FirstGuideline">1stsssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</string>
</resources>